--- a/Milestones/0.md
+++ b/Milestones/0.md
@@ -4,6 +4,7 @@
 * Edit vagrant config to forward port from guest to host.  
 * Serve static content: simple html page, css style page and an image.  
 * Manage url depending on parameters and different variables.  
+* Define a template for 404.
 
 #### Extra  
 
