--- a/Milestones/1.md
+++ b/Milestones/1.md
@@ -2,9 +2,9 @@
 
 #### Templates
 
-  * Use Model-View-Controller scheme as much as possible.
-  * Use Jinja2 to create different pages.
-  * Each page has to contain: A header, two columns in the body and a footer.
+  * [x] Use Model-View-Controller scheme as much as possible.
+  * [x] Use Jinja2 to create different pages.
+  * [x] Each page has to contain: A header, two columns in the body and a footer.
     * Header: Website logo, name of the site, subtitle and small login form.
     * 1º Column (Left): Menu to access different pages.
     * 2nd Column (Right): Main body of each page.
@@ -12,14 +12,14 @@
 
 #### Sessions
 
-  * Login form on header should display different content depending on the session status:
+  * [x] Login form on header should display different content depending on the session status:
     A simple form if user's not authenticated, a welcome message and a logout option otherwise.
   * On the left menu: options that allow users to visit the last three visited pages.
-  * Users should only be allowed to see some content when logged in.
+  * [x] Users should only be allowed to see some content when logged in.
 
 #### Basic Persistence
 
-  * Sign up page.
-  * Use `shelve` to save the information of the sign up form.
-  * "Profile" page to see the user information.
-  * "Edit profile" page.
+  * [x] Sign up page.
+  * [x] Use `shelve` to save the information of the sign up form.
+  * [x] "Profile" page to see the user information.
+  * [x] "Edit profile" page.
